--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -722,6 +722,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -787,6 +792,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.content-none {
+  --tw-content: none;
+  content: var(--tw-content);
+}
+
 @media (min-width: 768px) {
   .md\:container {
     width: 100%;
@@ -826,11 +836,6 @@ video {
 .before\:content-\[\'\|\'\]::before {
   --tw-content: '|';
   content: var(--tw-content);
-}
-
-.hover\:text-lg:hover {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .hover\:font-bold:hover {
@@ -903,16 +908,17 @@ video {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:pl-3 {
-    padding-left: 0.75rem;
-  }
-
   .md\:pt-32 {
     padding-top: 8rem;
   }
 
   .md\:text-left {
     text-align: left;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:before\:content-none::before {
